# vst-video

./: CMakeLists.txt  mainwindow.h  mainwindow.ui  mainwindow_detail.cpp  mainwindow_list.cpp  mainwindow_resource.cpp  vst-video
resources/: resources.qrc
src/: app.cpp  app.h  browsepage.cpp  browsepage.h  config.cpp  detailpage.cpp  detailpage.h  favorites.cpp  favorites.h  loading.cpp  loading.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_detail.cpp  mainwindow_loading.cpp  mainwindow_player.cpp  mainwindow_record.cpp  mainwindow_resource.cpp  mainwindow_theme.cpp  mainwindow_titlebar.cpp  mainwindow_tray.cpp  playerconfig.cpp  playerconfig.h  playerpage.cpp  playerpage.h  resourcelist.cpp  resourcelist.h  resourcesettings.cpp  resourcesettings.h  searchpage.cpp  searchpage.h  shortcutsettings.cpp  shortcutsettings.h  titlebar.cpp  titlebar.h  trayicon.cpp  trayicon.h  types.h  (+5 more)
